[tool.poetry]
name = "anastasiyaros"
version = "0.1.0"
description = "Test_HW"
authors = ["AnastasiyaRossova <rossovaay@ya.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.31.0"
attrs = "^23.2.0"
colorama = "^0.4.6"
coverage = "^7.4.1"
iniconfig = "^2.0.0"
packaging = "^23.2"
pluggy = "^1.4.0"
pytest = "^8.0.0"
pytest-cov = "^4.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
